# cftbtsp

./: CMakeLists.txt  README.md
src/: BootstrapRunner.cpp  BootstrapRunner.h  CMakeLists.txt  CftData.cpp  CftData.h  ConformalBlock.cpp  ConformalBlock.h  CorrelatorSet.cpp  CorrelatorSet.h  CrossingEquations.cpp  CrossingEquations.h  EquationSolver.h  IFunctionEquations.h  RandomAlgebricEquations.cpp  RandomAlgebricEquations.h  Scalar4ptFunction.cpp  Scalar4ptFunction.h  common.cpp  common.h  gegenbauer_polynomial.hpp  main.cpp
src/test/: BootstrapRunnerTests.cpp  CftDataTests.cpp  ConformalBlockTests.cpp  CorrelatorSetTests.cpp  CrossingEquationsTests.cpp  Demo.cpp  RandomAlgebricEquationsTests.cpp  Scalar4ptFunctionTests.cpp  commonTests.cpp  test.cpp  test.h
